REFACTOR-4 Refactor: post, postUpdateHistory 간 관계 정리